# hve-stem

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  NARRATIVE.md  NOTES.md  README.md  SECURITY.md  github.py  mcp.json  pyproject.toml  stem.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: contest-review.prompt.md
.github/skills/copilot-sdk-setup/: SKILL.MD
.github/workflows/: ci.yml  squad-heartbeat.yml  squad-issue-assign.yml  squad-triage.yml  stem-assess.yml  sync-squad-labels.yml
.squad/: .first-run  team.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/identity/: now.md  wisdom.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/api/: client.ts  types.ts  useAssess.ts
app/stem/: cli.py
docs/: mcp.md
docs/adr/: adr-0001-python-cli-foundation.md  adr-0002-copilot-sdk-integration.md  adr-0003-stem-instance-repository-structure.md  adr-0004-agent-skill-namespace-separation.md  adr-0005-blueprint-and-policy-colocation.md  adr-0006-blueprint-sourcing-strategy.md  adr-0007-externalized-mcp-server-configuration.md  adr-0008-web-ui-served-via-fastapi.md  adr-0009-frontend-framework-and-primer-design-system.md  adr-0010-devlake-as-metric-backend.md  adr-0011-react-markdown-for-report-rendering.md
docs/commands/: assess.md  init.md  mcp.md  remediate.md  serve.md
src/stem/: __init__.py  __main__.py  cli.py  engine.py  session.py  workspace.py
tests/: test_assess.py  test_cli.py  test_init.py  test_mcp.py  test_serve.py  test_tools_devlake.py  test_tools_github_api.py  test_tools_init.py  test_workspace.py
(+35 files in other folders)
